# door-reminder

./: .gitignore  .gitmodules  README.md  todo.txt
diagrams/: Door Device Architecture.drawio  Doorsi Overall Architecture.drawio
hardware/: main-board.b#1  main-board.b#2  main-board.brd  main-board.s#1  main-board.s#2  main-board.s#3  main-board.sch
hardware/part-libraries/: 2134441-2.lbr  CP2102N-A02-GQFN24.lbr  ESP32-D0WDQ6.lbr  ESP32-WROOM-32D.lbr  REG_EY1501DI-ADJ.lbr  SI1151-AB00-GM.l#1  SI1151-AB00-GM.l#2  SI1151-AB00-GM.lbr  SP0503BAHTG.lbr
hardware/part-libraries/incomplete/: FPC241H-040G10M.lbr  REG_EY1501DI-ADJ.lbr
other/: Untitled.xcf
software/: .gitignore  Firebase Setup.docx  notes.txt
software/app/door_reminder/: README.md  pubspec.yaml
software/app/door_reminder/android/: settings.gradle
software/app/door_reminder/lib/: account_menu.dart  dataCache.dart  hamburger_menu.dart  (+4 more)
software/backend/: .firebaserc  Firebase Setup.docx
software/backend/functions/: index.js  package-lock.json
software/esp/: .gitignore  ESP-IDF Programming Guide.url
software/esp/door_reminder/: CMakeLists.txt  Makefile  README.md  sdkconfig  spackle_n_paint.PS1  todo.txt
software/esp/fast_scan/: sdkconfig  sdkconfig.old
software/rust-esp/: Cargo.toml
software/rust-esp/src/: doorsi.rs  main.rs
software/rust_doorsi/: Cargo.toml  libclang path
software/rust_doorsi/.cargo/: config.toml
software/rust_doorsi/src/: doorsi.rs  lib.rs  main.rs  tests.rs  wifi.rs
software/rust_doorsi/src/doorsi/: bluetooth.rs  db_proxy.rs  ir_sensor.rs  reminder.rs  user.rs
(+57 files in other folders)
